# mg-wishlist

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/: manage.py
src/customers/: api.py  managers.py  models.py  schemas.py
src/customers/migrations/: 0001_create_model_customer.py  0002_create_wishlist_model.py  0003_create_customer_wishlist_m2m_relation.py
src/customers/tests/: conftest.py  test_api.py  test_models.py
src/mg_ticket/: asgi.py  settings.py  urls.py  wsgi.py
src/mg_wishlist/: asgi.py  settings.py  urls.py  wsgi.py
src/products/: managers.py  models.py
src/products/migrations/: 0001_create_model_products.py  0001_create_product_model.py
