[tool.poetry]
name = "mg-ticket"
version = "0.1.0"
description = ""
authors = ["Jean Rodrigues <jean.rodrigues@olist.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django-ninja = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.25.0"
ipdb = "^0.13.9"
black = "^21.7b0"
isort = "^5.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
