[tool.poetry]
name = "mg-ticket"
version = "0.1.0"
description = ""
authors = ["Jean Rodrigues <jean.rodrigues@olist.com>"]
packages = [
    { include = "*", from = "src" }
]
exclude = [
    "**/tests"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mg_ticket.settings"

[tool.poetry.dependencies]
python = "^3.9"
django-ninja = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
ipython = "^7.25.0"
ipdb = "^0.13.9"
black = "^21.7b0"
isort = "^5.9.2"
pytest-django = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
