[tool.black]
line-length = 110
target-version = ["py38"]

[tool.isort]
line_length = 110
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_local_folder = "apps,utils,tests,src"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mg_wishlist.settings"

[tool.poetry]
name = "mg-wishlist"
version = "0.1.0"
description = ""
authors = ["Jean Rodrigues <misc@jean.bz>"]
packages = [
    { include = "*", from = "src" }
]
exclude = [
    "**/tests"
]

[tool.poetry.dependencies]
python = "^3.9"
django-ninja = "^0.13.2"
email-validator = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
ipython = "^7.25.0"
ipdb = "^0.13.9"
black = "^21.7b0"
isort = "^5.9.2"
pytest-django = "^4.4.0"
pre-commit = "^2.13.0"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
